# iMateC

./: CMakeLists.txt  README.md
src/: Evaluation.h  GameState.c  GameState.h  IMate.c  IMate.h  Main.c  Move.h
src/Commands/: Commands.c  Commands.h
src/Commands/CommandImplementation/: GoCommand.c  HelpCommand.c  MoveCommand.c  PositionCommand.c  PrintCommand.c  QuitCommand.c  StatusCommand.c
src/Evaluation/: Evaluation.c  Evaluation.h  EvaluationData.c  EvaluationData.h
src/Moves/: Move.c  Move.h  MoveCollection.c  MoveCollection.h  MoveGeneration.c  MoveGeneration.h
src/Moves/PieceMoveGeneration/: BishopMoveGeneration.c  KingMoveGeneration.c  KnightMoveGeneration.c  PawnMoveGeneration.c  QueenMoveGeneration.c  RookMoveGeneration.c
src/Search/: Search.c  Search.h
src/State/: GameState.c  GameState.h
